--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>todo for mocha (testing)</title>
+  <link rel="stylesheet" href="css/variable.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
