don't add task if input is empty

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <form action="" id="todoContainer">
       <div class="add-todo">
-        <input type="text" name="add-todo" id="addTodoData" class="addTodoInput" value="testing task"
+        <input type="text" name="add-todo" id="addTodoData" class="addTodoInput" value=""
           placeholder="write task here...">
         <input type="button" value="Add" id="addTodoBtn">
       </div>
